--- a/Tartanhacks/src/views/profile.html
+++ b/Tartanhacks/src/views/profile.html
@@ -11,24 +11,28 @@
     </head>
     <body>
         
-        <button type="button1" class="help">I'm confused</button>
         
-        <h1>HOME PAGE <button type="button1" class="me" id="MeBtn">Me</button></h1>
-        
+        <h1>My Plaid Profile</h1>
         
         
- 
+        
+        <p>
+            <button type="button" class="Home" id="MeBtn">Home</button>
+            
+        </p>
+        
 
 <!-- The Modal -->
 
 
         
-        <!--
-            WHAT IS BRACKETS?
-        -->
+  
+            <p>Name: #{name}    AndrewId: #{andrewId}</p> 
         <p>
-            <button type="button" class="event">Event</button>
-             <button type="button" class="study">Study Buddy</button>
+            Major: #{major}</p>
+        <p>
+            Dept: #{dept}
+             <button type="button" class="dates">My Buddy Dates</button>
         </p>
         
         <!--
@@ -41,8 +45,8 @@
 
         
         <p>
-            <button type="button" class="friend">Friend</button>
-            <button type="button" class="hometown">Home Town </button>
+            Courses: #{courses}
+            <button type="button" class="previous">My Buddies</button>
         </p>
         
         <p>
@@ -50,8 +54,7 @@
         </p>
         
         <p>
-            <button type="button" class="custom">Custom</button>
-            <button type="button" class="favorites">Favorites</button>
+            <button type="button" class="chat">Chat Room</button>
         </p>
         
         <p>
