--- a/src/public/views/homepage.html
+++ b/src/public/views/homepage.html
@@ -5,22 +5,22 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Home Page</title>
-        <meta name="description" content="Homepage-y things">
-        <script src="../js/homepage.js"></script>
-        <link rel="stylesheet" href="../css/main.css">
+        <meta name="description" content="An interactive getting started guide for Brackets.">
+        <link rel="stylesheet" href="main.css">
     </head>
     <body>
         
         <button type="button1" class="help">I'm confused</button>
         
-        <h1>HOME PAGE <button type="button1" class="me" id="MeBtn">Me</button></h1>
+        <h1>HOME PAGE</h1>
         
         
         
- 
-
-<!-- The Modal -->
-
+        <p>
+            <button type="button1" class="me" data-toggle="modal" data-target="#myModal">Me</button>
+            
+        </p>
+        
 
         
         <!--
