--- a/src/public/views/login.html
+++ b/src/public/views/login.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Home Page</title>
         <meta name="description" content="An interactive getting started guide for Brackets.">
-        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="main.css">
     </head>
     <body>
         
