--- a/src/views/homepage.pug
+++ b/src/views/homepage.pug
@@ -1,27 +1,4 @@
-doctype html
-html
-  head
-    meta(charset='utf-8')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    title Home Page
-    meta(name='description', content='An interactive getting started guide for Brackets.')
+include homepage.html   
+head
     style
-        include main.css
-  body
-    button.help(type='button1') I'm confused
-    h1 HOME PAGE
-    p
-      button.me(type='button1', data-toggle='modal', data-target='#myModal') Me
-    p
-      button.event(type='button') Event
-      |  
-      button.study(type='button') Study Buddy
-    p
-      button.friend(type='button') Friend
-      |  
-      button.hometown(type='button') Home Town
-    p
-    p
-      button.custom(type='button') Custom
-      |  
-      button.favorites(type='button') Favorites
+        include ../css/main.css
