--- a/Tartanhacks/src/views/homepage.html
+++ b/Tartanhacks/src/views/homepage.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     
+    <img src="../../images/plaid.pdf">
+    
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +15,7 @@
         
         <button type="button1" class="help">I'm confused</button>
         
-        <h1>HOME PAGE <button type="button1" class="me" id="MeBtn">Me</button></h1>
+        <h1 class="main">Home Page<button type="button1" class="me" id="MeBtn">Profile</button></h1>
         
         
         
@@ -51,7 +53,6 @@
         
         <p>
             <button type="button" class="custom">Custom</button>
-            <button type="button" class="favorites">Favorites</button>
         </p>
         
         <p>
