--- a/Tartanhacks/src/views/login.html
+++ b/Tartanhacks/src/views/login.html
@@ -11,20 +11,20 @@
     <body>
         
         
-        <h1>Login or Sign Up!</h1>
+        <h1 class="main">Login or Sign Up!</h1>
         
         
         
-        <form action="demo_form.asp">
-  Andrew ID <input type="text" name="fname"><br>
-  Password <input type="text" name="lname"><br>
-  <input type="submit">
+        <form action="demo_form.asp"class="main">
+  Andrew ID <input type="text" name="fname" class="main"><br class="main">
+  Password <input type="text" name="lname" class="main"><br class="main">
+  <input type="submit" class="main">
 </form>
         <!--
             WHAT IS BRACKETS?
         -->
         <p>
-            <button type="button" class="make-account">What is this shit, I don't have an account</button>
+            <button type="button" class="make-account" class="main">What is this shit, I don't have an account</button>
         </p>
         
       
