now with python

--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
     
+    <img src="../static/images/plaid.jpeg">
+    
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Home Page</title>
         <meta name="description" content="Homepage-y things">
-        <script src="../js/homepage.js"></script>
-        <link rel="stylesheet" href="../css/main.css">
+        <script src="/static/js/homepage.js"></script>
+        <link rel="stylesheet" href="/static/css/main.css">
     </head>
     <body>
         
         <button type="button1" class="help">I'm confused</button>
         
-        <h1>HOME PAGE <button type="button1" class="me" id="MeBtn">Me</button></h1>
+        <h1 class="main">Home Page<button type="button1" class="me" id="MeBtn">Profile</button></h1>
         
         
         
@@ -51,7 +53,6 @@
         
         <p>
             <button type="button" class="custom">Custom</button>
-            <button type="button" class="favorites">Favorites</button>
         </p>
         
         <p>
