--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -6,25 +6,25 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Home Page</title>
         <meta name="description" content="An interactive getting started guide for Brackets.">
-        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="/static/css/main.css">
     </head>
     <body>
         
         
-        <h1>Login or Sign Up!</h1>
+        <h1 class="main">Login or Sign Up!</h1>
         
         
         
-        <form action="demo_form.asp">
-  Andrew ID <input type="text" name="fname"><br>
-  Password <input type="text" name="lname"><br>
-  <input type="submit">
+        <form action="" formmethod="POST'" class="main">
+  Andrew ID <input type="text" name="username" class="main"><br class="main">
+  Password <input type="password" name="password" class="main"><br class="main">
+  <input type="submit" class="main">
 </form>
         <!--
             WHAT IS BRACKETS?
         -->
         <p>
-            <button type="button" class="make-account">What is this shit, I don't have an account</button>
+            <button type="button" class="make-account" class="main">What is this shit, I don't have an account</button>
         </p>
         
       
