--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -15,10 +15,10 @@
         
         
         
-        <form action="" formmethod="POST'" class="main">
+        <form action="" method=post class="main">
   Andrew ID <input type="text" name="username" class="main"><br class="main">
   Password <input type="password" name="password" class="main"><br class="main">
-  <input type="submit" class="main">
+  <input type=submit class="main">
 </form>
         <!--
             WHAT IS BRACKETS?
