--- a/src/templates/buddysetup.html
+++ b/src/templates/buddysetup.html
@@ -6,31 +6,33 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Home Page</title>
         <meta name="description" content="Homepage-y things">
-        <script src="/static/js/homepage.js"></script>
+        <script src="../js/homepage.js"></script>
         <link rel="stylesheet" href="/static/css/main.css">
     </head>
     <body>
         
-        <button type="helpbutton" class="help">I'm confused</button>
         
-        <h1 class="main">Home Page<button type="button1" class="me" id="MeBtn">Profile</button></h1>
-        
+        <h1 class="main">Here's you match!</h1>
         
         
- 
+        
+        
 
 <!-- The Modal -->
+<button type="button" class="home" id="MeBtn">Home</button>
 
+        <img src="/static/images/picture.png" alt="Visual Approximation" class="matchPic" style="width:304px;height:228px;">
+  
+            <p class="main">Name: #{name}    AndrewId: #{andrewId}</p> 
+        <p class="main">
+            Year: #{year}</p>
 
-        
-        <!--
-            WHAT IS BRACKETS?
-        -->
-        <p>
-            <button type="event" class="event">Event</button>
-             <button type="study" class="study">Study Buddy</button>
-        </p>
-        
+    <br><br>
+    
+        <div>
+        <button type="message" class="message">Send Message!</button>
+    
+        </div>
         <!--
             GET STARTED WITH YOUR OWN FILES
         -->
@@ -40,17 +42,14 @@
            
 
         
-        <p>
-            <button type="friend" class="friend">Friend</button>
-            <button type="hometown" class="hometown">Home Town </button>
-        </p>
+       
         
         <p>
             
         </p>
         
         <p>
-            <button type="custom" class="custom">Custom</button>
+            
         </p>
         
         <p>
