--- a/src/templates/signup.html
+++ b/src/templates/signup.html
@@ -5,66 +5,29 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Home Page</title>
-        <meta name="description" content="Homepage-y things">
-        <script src="/static/js/homepage.js"></script>
+        <meta name="description" content="An interactive getting started guide for Brackets.">
         <link rel="stylesheet" href="/static/css/main.css">
     </head>
     <body>
         
-        <button type="helpbutton" class="help">I'm confused</button>
         
-        <h1 class="main">Home Page<button type="button1" class="me" id="MeBtn">Profile</button></h1>
-        
+        <h1 class="main">Sign Up!</h1>
         
         
- 
-
-<!-- The Modal -->
-
-
         
+        <form action="" formmethod="POST'" class="main">
+  What is your Andrew ID? <input type="text" name="username" class="main"><br class="main">
+  Make a password! <input type="password" name="password" class="main"><br class="main">
+  <input type="submit" class="main">
+</form>
         <!--
             WHAT IS BRACKETS?
         -->
         <p>
-            <button type="event" class="event">Event</button>
-             <button type="study" class="study">Study Buddy</button>
+            <button type="button" class="make-account" class="main">What is this shit, I don't have an account</button>
         </p>
         
-        <!--
-            GET STARTED WITH YOUR OWN FILES
-        -->
-        
-        
-   
-           
-
-        
-        <p>
-            <button type="friend" class="friend">Friend</button>
-            <button type="hometown" class="hometown">Home Town </button>
-        </p>
-        
-        <p>
-            
-        </p>
-        
-        <p>
-            <button type="custom" class="custom">Custom</button>
-        </p>
-        
-        <p>
-            
-        </p>
-        
-
-        
-        <!--
-            THE RELATIONSHIP BETWEEN HTML, CSS AND JAVASCRIPT
-        -->
-        
-            
-        
+      
     </body>
 </html>
 <!--
