--- a/src/templates/buddypage.html
+++ b/src/templates/buddypage.html
@@ -12,26 +12,30 @@
     <body>
         
         
-        <h1 class="main">Here's you match!</h1>
+        <h1 class="main">Buddy List!</h1>
         
         
         
+        <p>
+            <button type="button" class="home" id="MeBtn">Home</button>
+            
+        </p>
         
 
 <!-- The Modal -->
-<button type="button" class="home" id="MeBtn">Home</button>
 
-        <img src="/static/images/Happy_stick_figure.jpg" alt="Visual Approximation" class="matchPic" style="width:304px;height:228px;">
+
+       
   
-            <p class="main">Name: #{name}    AndrewId: #{andrewId}</p> 
-        <p class="main">
-            Year: #{year}</p>
-
-    <br><br>
-    
+            <ol>
+                <li>
+                    #{andrewId}
+                     
+                    
+                <img src="/static/images/ninja.jpg" alt="Visual Approximation" class="buddyPic"></li>
+                <p><button type="message" class="messageBud">Send Message!</button></p>
+            </ol>
         <div>
-        <button type="message" class="message">Send Message!</button>
-    
         </div>
         <!--
             GET STARTED WITH YOUR OWN FILES
@@ -39,22 +43,6 @@
         
         
    
-           
-
-        
-       
-        
-        <p>
-            
-        </p>
-        
-        <p>
-            
-        </p>
-        
-        <p>
-            
-        </p>
         
 
         
